# ProjectValhalla

./: .clang-format  .dockerrc  CMakeLists.txt  Changelog.txt  README.md  Todo.txt
.github/workflows/: ubuntu_build_release.yml
api/: del_patient.json  get_patient.json  patient.json  search.json  update_patient.json  user.json
api/clinic/: create_clinic.json  delete_clinic.json  read_clinic.json  update_clinic.json
api/patient/: create_patient.json  delete_patient.json  read_patient.json  update_patient.json
api/providers/: create_provider.json  login_provider.json  read_provider.json  update_provider.json
api/scripts/: benchmark_r1.py  benchmark_w1.py  benchmark_w1.sh  gen_random_patient.sh  k6.js  k6c.js  k6r.js  k6w.js
api/services/: create.json  search.json
api/users/: create_user.json  delete_user.json  login_user.json  read_user.json  update_user.json
docker/: .env  docker-compose.yml  dockerfile.api  dockerfile.api_dev  dockerfile.client_dev  entrypoint.sh  valhalla
docker/backend/database/: dockerfile.pq  init.sql
docker/backend/dev/: api.env  dockerfile.api  dockerfile.nginx  valhalla
docker/backend/run/: api.env  dockerfile.api  dockerfile.nginx  valhalla
docker/dockerhub/: Dockerfile
docker/dockerhub/api/: Dockerfile
docker/dockerhub/dev/: Dockerfile
scripts/: benchmark_r1.sh  gen_random_get_patient.sh  gen_random_patient.sh  k6c.js  k6r.js  k6w.js
src/: api_v1_routes.cpp  api_v1_routes.hpp  databaseconnectionpool.cpp  databaseconnectionpool.hpp  databasecontroller.cpp  databasecontroller.hpp  main.cpp  patientcontroller.cpp  patientcontroller.hpp  resthelper.cpp  resthelper.hpp  server.cpp  server.hpp  sqlman.cpp  sqlman.hpp  tokenizer.cpp  tokenizer.hpp  usercontroller.cpp  usercontroller.hpp
src/controllers/: databasecontroller.cpp  databasecontroller.hpp  patientcontroller.cpp  patientcontroller.hpp  usercontroller.cpp  usercontroller.hpp
src/controllers/base/clientcontroller/: clientcontroller.tpp
src/controllers/base/controller/: controller.hpp
src/controllers/clientcontroller/: clientcontroller.tpp
src/controllers/cliniccontroller/: cliniccontroller.cpp  cliniccontroller.hpp
src/controllers/controller/: controller.cpp  controller.hpp
src/controllers/databasecontroller/: databasecontroller.cpp  databasecontroller.hpp
src/controllers/patientcontroller/: patientcontroller.cpp  patientcontroller.hpp
src/controllers/providercontroller/: providercontroller.cpp  providercontroller.hpp
src/controllers/servicecontroller/: servicecontroller.tpp  servicecontrollerbase.hpp
src/controllers/usercontroller/: usercontroller.cpp  usercontroller.hpp
src/database/: database.cpp  database.hpp  databaseconnectionpool.cpp  databaseconnectionpool.hpp
src/entities/: client.hpp  clinic.hpp  clinics.hpp  entity.hpp  laboratories.hpp  patient.hpp  pharmacies.hpp  provider.hpp  radiologycenters.hpp  user.hpp
src/entities/base/: base.hpp  client.hpp  entity.hpp
src/entities/people/: provider.hpp  user.hpp
src/entities/services/: laboratories.hpp  pharmacies.hpp  radiologycenters.hpp
src/entities/services/clinics/: clinics.hpp  patient.hpp
src/middlewares/: authentication.hpp  authorization.hpp  dataintegrity.hpp  deauthentication.hpp  elapsedtime.hpp  getpatientverifier.hpp  ratelimit.hpp  search.hpp  xrequest.hpp
src/routes/: api_v1_routes.cpp  api_v1_routes.hpp
src/server/: banner.hpp  server.cpp  server.hpp
src/server/extras/: banner.hpp  corshandler.hpp
src/store/: interface.hpp  object.hpp  objectstore.hpp  objecttypes.hpp  store.cpp  store.hpp  types.hpp
src/utils/: dosdetector.cpp  dosdetector.hpp  getvars.hpp  passwordcrypt.cpp  resthelper.cpp  resthelper.hpp  sqlman.hpp  tokenizer.hpp
src/utils/dosdetector/: dosdetector.cpp  dosdetector.hpp
src/utils/dosdetector/helpers/: ddenvloader.hpp
src/utils/envloader/: envloader.cpp  envloader.hpp
src/utils/envvars/: envvars.cpp  envvars.hpp
src/utils/factory/: factory.cpp  factory.hpp
src/utils/getvars/: getvars.cpp
src/utils/passwordcrypt/: passwordcrypt.cpp  passwordcrypt.hpp
src/utils/resthelper/: resthelper.cpp  resthelper.hpp
src/utils/sessionmanager/: sessionmanager.cpp  sessionmanager.hpp
src/utils/sqlman/: sqlman.cpp
src/utils/tokenizer/: tokenizer.hpp
src/utils/tokenmanager/: tokenmanager.cpp  tokenmanager.hpp
